# stepper-synth

./: .asoundrc  .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: CI.yml
gui/: Stepper-Synth.pygame
gui/stepper_synth/: config.py  controls.py  effect_menu.py  engine_menu.py  full_dial.py  logger.py  organ_screen.py  reverb_menu.py  stepper.py  sub_synth_screen.py  synth_state.py  utils.py  wt.py  wt_env_menu.py  wt_lfo_menu.py  wt_lp_menu.py  wt_menu.py  wt_mod_menu.py  wt_osc_menu.py
src/: ipc.rs  lib.rs  pygame_coms.rs  sequencer.rs
src/effects/: chorus.rs  mod.rs  reverb.rs
src/synth_engines/: midi_out_engine.rs  mod.rs
src/synth_engines/organ/: mod.rs  organ.rs
src/synth_engines/synth/: mod.rs  osc.rs  saw_tooth.rs  synth.rs
src/synth_engines/synth_common/: env.rs  lfo.rs  mod.rs  moog_filter.rs  osc.rs
src/synth_engines/wave_table/: mod.rs
src/synth_engines/wave_table/wavetable_synth/: common.rs  lfo.rs  mod.rs  voice.rs
src/synth_engines/wave_table/wavetable_synth/config/: mod.rs
src/synth_engines/wave_table/wavetable_synth/synth_engines/synth/: mod.rs  osc.rs
src/synth_engines/wave_table/wavetable_synth/synth_engines/synth_common/: env.rs  moog_filter.rs
src/synth_engines/wurlitzer/: mod.rs  note_osc.rs
