[package]
name = "stepper-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stepper_synth_backend"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
crossbeam = { version = "0.8.4", features = ["nightly"] }
fern = { version = "0.7.0", features = ["colored"] }
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
midi-control = "0.2.2"
midir = "0.10.1"
pyo3 = "0.22.0"
reverb = "1.0.47"
tinyaudio = "1.0.0"
# synth-rt = { git = "https://github.com/calacuda/synth-rt", version = "0.1.0" }
