[package]
name = "stepper-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stepper_synth_backend"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
fern = { version = "0.7.0", features = ["colored"] }
fxhash = "0.2.1"
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
midi-control = "0.2.2"
midir = "0.10.1"
pyo3 = "0.22.0"
reverb = "1.0.47"
strum = { version = "0.26.3", features = ["derive"] }
tinyaudio = "1.0.0"
