[package]
name = "stepper-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stepper_synth_backend"
crate-type = ["cdylib", "lib"]

[features]
default = ["pyo3", "midir"]
pyo3 = ["dep:pyo3"]
midir = ["dep:midir"] 

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
array-macro = "2.1.8"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
enum_dispatch = "0.3.13"
fern = { version = "0.7.0", features = ["colored"] }
fxhash = "0.2.1"
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
midi-control = { version = "0.2.2", default-features = false }
midir = { version = "0.10.1", optional = true }
pyo3 = { version = "0.23.3", optional = true }
reverb = "1.0.47"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tinyaudio = "1.0.0"
toml = "0.8.20"
# wavetable-synth = { git = "https://github.com/calacuda/wavetable-synth", version = "0.1.0" }
